Add message for duplicated community serial number

--- a/app/src/main/res/layout/activity_bike_form.xml
+++ b/app/src/main/res/layout/activity_bike_form.xml
@@ -103,7 +103,7 @@
                     android:layout_marginTop="@dimen/margin_medium"
                     android:layout_marginEnd="@dimen/margin_medium"
                     android:hint="@string/bike_serial_number"
-                    app:errorBicycleSerialNumber="@{viewModel.serialNumber}"
+                    app:errorBicycleSerialNumber="@{viewModel.serialNumberErrorValidationMap}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/bikePhotoImageView">
