Created validation for duplicate user doc number
In the same community, is not allowed to have duplicated users with the same doc number.

Created validation based on the already retrieved user list, to avoid firebase consumption.

Android Profiler with API 22 is same as before the change.

--- a/app/src/main/res/layout/fragment_user_form.xml
+++ b/app/src/main/res/layout/fragment_user_form.xml
@@ -365,18 +365,18 @@
                         android:layout_marginStart="@dimen/margin_medium"
                         android:layout_marginTop="@dimen/margin_medium"
                         android:layout_marginEnd="@dimen/margin_medium"
-                        android:hint="@string/add_user_cpf_hint"
-                        app:errorMessage="@{`add_user_invalid_cpf`}"
+                        android:hint="@string/add_user_doc_number_hint"
+                        app:errorUserDocNumber="@{viewModel.docNumberErrorValidationMap}"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/residenceDivider"
-                        app:textCaptured="@{viewModel.userDocument}">
+                        app:layout_constraintTop_toBottomOf="@+id/residenceDivider">
 
                     <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/ietCpf"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="number"
+                            android:maxLength="@integer/max_size_user_doc_number"
                             android:text="@={viewModel.userDocument}" />
 
                 </com.google.android.material.textfield.TextInputLayout>
