--- a/app/src/main/res/layout/fragment_user_form.xml
+++ b/app/src/main/res/layout/fragment_user_form.xml
@@ -137,11 +137,14 @@
                         app:layout_constraintTop_toBottomOf="@+id/ilCompleteName"
                         app:textCaptured="@{viewModel.userIncome}">
 
-                    <com.google.android.material.textfield.TextInputEditText
+                    <EditText
                             android:id="@+id/ietIncome"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="numberDecimal"
+                            android:inputType="textNoSuggestions"
+                            app:drawableEndCompat="@drawable/ic_arrow_down"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
                             android:text="@={viewModel.userIncome}" />
 
                 </com.google.android.material.textfield.TextInputLayout>
