--- a/app/src/main/res/layout/fragment_user_form.xml
+++ b/app/src/main/res/layout/fragment_user_form.xml
@@ -149,58 +149,35 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <TextView
-                        android:id="@+id/tvGender"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="16dp"
-                        android:text="@string/add_user_gender"
-                        android:textColor="@color/title_gray"
-                        app:layout_constraintBottom_toTopOf="@+id/genderRadioGroup"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/ilAge" />
-
-                <RadioGroup
-                        android:id="@+id/genderRadioGroup"
+                <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/ilGender"
+                        style="@style/textInputLayout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        app:layout_constraintEnd_toEndOf="@id/ilCompleteName"
-                        app:layout_constraintStart_toStartOf="@id/ilCompleteName"
-                        app:layout_constraintTop_toBottomOf="@+id/tvGender"
-                        app:setRadioGroupCheck="@{viewModel.userGender}">
+                        android:layout_marginStart="@dimen/margin_medium"
+                        android:layout_marginTop="@dimen/margin_medium"
+                        android:layout_marginEnd="@dimen/margin_medium"
+                        android:hint="@string/add_user_gender"
+                        app:errorMessage="@{`add_user_invalid_gender`}"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/ilAge"
+                        app:layout_constraintBottom_toTopOf="@+id/ilRacial"
+                        app:textCaptured="@{viewModel.userGender}">
 
-                    <RadioButton
-                            android:id="@+id/rbGenderMale"
-                            android:layout_width="wrap_content"
+                    <EditText
+                            android:id="@+id/etGender"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:onClick="@{() -> viewModel.setUserGender(@id/rbGenderMale)}"
-                            android:text="@string/rb_male_option" />
+                            android:cursorVisible="false"
+                            android:drawableRight="@drawable/ic_arrow_down"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
+                            android:inputType="textNoSuggestions"
+                            android:clickable="false"
+                            android:text="@{viewModel.userGender}" />
 
-                    <RadioButton
-                            android:id="@+id/rbGenderFemale"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:onClick="@{() -> viewModel.setUserGender(@id/rbGenderFemale)}"
-                            android:text="@string/rb_female_option" />
-
-                    <RadioButton
-                            android:id="@+id/rbGenderOther"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:onClick="@{() -> viewModel.setUserGender(@id/rbGenderOther)}"
-                            android:text="@string/rb_other_option" />
-
-                    <RadioButton
-                            android:id="@+id/rbGenderNoAnswer"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:onClick="@{() -> viewModel.setUserGender(@id/rbGenderNoAnswer)}"
-                            android:text="@string/rb_no_answer_option" />
-                </RadioGroup>
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/ilRacial"
@@ -214,7 +191,7 @@
                         app:errorMessage="@{`add_user_invalid_racial`}"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup"
+                        app:layout_constraintTop_toBottomOf="@+id/ilGender"
                         app:textCaptured="@{viewModel.userRacial}">
 
                     <EditText
