--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,7 @@
     <color name="gray_2">#4F4F4F</color>
     <color name="gray_3">#828282</color>
     <color name="gray_5">#E0E0E0</color>
+    <color name="gray_5_opacity_40">#65E0E0E0</color>
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/colorPrimary</color>
     <color name="title_gray">#4F4F4F</color>
     <color name="bike_action_text_gray">#828282</color>
