--- a/app/src/main/res/layout/dialog_change_image.xml
+++ b/app/src/main/res/layout/dialog_change_image.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -12,7 +11,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_margin="@dimen/margin_medium"
-            app:srcCompat="@android:drawable/ic_delete"
+            app:srcCompat="@drawable/ic_baseline_close"
             app:tint="@color/black" />
 
     <TextView
@@ -22,7 +21,7 @@
             android:layout_marginTop="16dp"
             android:textColor="@color/black"
             android:text="@string/title_dialog_change_image"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,17 +33,16 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:text="@string/subtitle_dialog_change_image"
             android:layout_margin="@dimen/margin_big"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dialogTitle"
-            tools:text="Tire uma foto clara e que pegue todo o rosto." />
+            app:layout_constraintTop_toBottomOf="@+id/dialogTitle"/>
 
     <ImageView
-            android:id="@+id/cancelButton"
+            android:id="@+id/dialogImage"
             android:layout_width="0dp"
             android:layout_height="120dp"
             android:layout_marginStart="@dimen/margin_medium"
@@ -55,18 +53,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dialogSubtitle"/>
 
-
-
     <ImageView
             android:id="@+id/dialogImageIcon"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:src="@drawable/ic_add_a_photo_white"
-            app:layout_constraintBottom_toBottomOf="@+id/cancelButton"
-            app:layout_constraintEnd_toEndOf="@+id/cancelButton"
-            app:layout_constraintStart_toStartOf="@+id/cancelButton"
-            app:layout_constraintTop_toTopOf="@+id/cancelButton" />
-
+            android:src="@drawable/ic_baseline_add_photo_alternate"
+            app:layout_constraintBottom_toBottomOf="@+id/dialogImage"
+            app:layout_constraintEnd_toEndOf="@+id/dialogImage"
+            app:layout_constraintStart_toStartOf="@+id/dialogImage"
+            app:layout_constraintTop_toTopOf="@+id/dialogImage" />
 
     <Button
             android:id="@+id/submitButton"
@@ -84,7 +79,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cancelButton" />
-
+            app:layout_constraintTop_toBottomOf="@id/dialogImage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
