--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -12,6 +12,7 @@
     <declare-styleable name="CustomEditText">
         <attr name="text_label" format="string"/>
         <attr name="text_hint" format="string"/>
+        <attr name="android:inputType" />
     </declare-styleable>
 
 </resources>
