adjust process delete

--- a/app/src/main/res/navigation/user_nav_graph.xml
+++ b/app/src/main/res/navigation/user_nav_graph.xml
@@ -43,6 +43,9 @@
         <argument
                 android:name="editMode"
                 app:argType="boolean" />
+        <argument
+                android:name="deleteImagePaths"
+                app:argType="string[]"/>
     </fragment>
 
 </navigation>
