feature: Finish picture view component

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -18,6 +18,7 @@
     <declare-styleable name="CustomPicturePick">
         <attr name="android:src"/>
         <attr name="android:text"/>
+        <attr name="picture" format="reference"/>
     </declare-styleable>
 
 </resources>
