--- a/app/src/main/res/layout/custom_picture_pick.xml
+++ b/app/src/main/res/layout/custom_picture_pick.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@drawable/border_rounded_corner_black">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/picture"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_margin="1dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -25,8 +25,7 @@
             app:layout_constraintBottom_toTopOf="@+id/label"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed"
-            tools:src="@drawable/ic_add_a_photo" />
+            app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
             android:id="@+id/label"
@@ -40,7 +39,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/icon"
-            tools:text="Fotografe a frente do documento" />
+            app:layout_constraintTop_toBottomOf="@+id/icon"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
