--- a/app/src/main/res/layout/fragment_user_form.xml
+++ b/app/src/main/res/layout/fragment_user_form.xml
@@ -41,6 +41,7 @@
                         android:scaleType="center"
                         app:imagePathOrUrlCircle="@{viewModel.userImageProfile}"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.497"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -72,6 +73,18 @@
                         app:layout_constraintStart_toStartOf="@+id/profileImageView"
                         app:layout_constraintTop_toTopOf="@+id/profileImageView"
                         app:tint="@color/gray_5" />
+
+                <app.igormatos.botaprarodar.common.components.CustomPicturePick
+                        android:layout_width="@dimen/width_156"
+                        android:layout_height="@dimen/width_100"
+                        app:layout_constraintBottom_toBottomOf="@+id/profileImageView"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.516"
+                        tools:ignore="MissingConstraints"
+                        app:imagePathOrUrl="@{viewModel.userImageProfile}"
+                        tools:layout_editor_absoluteX="5dp"
+                        tools:src="@drawable/ic_baseline_add_a_photo"
+                        tools:text="Lesley kkkk" />
 
                 <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/ilCompleteName"
@@ -141,11 +154,11 @@
                             android:id="@+id/ietIncome"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="textNoSuggestions"
-                            app:drawableEndCompat="@drawable/ic_arrow_down"
                             android:focusable="false"
                             android:focusableInTouchMode="false"
-                            android:text="@={viewModel.userIncome}" />
+                            android:inputType="textNoSuggestions"
+                            android:text="@={viewModel.userIncome}"
+                            app:drawableEndCompat="@drawable/ic_arrow_down" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -159,22 +172,22 @@
                         android:layout_marginEnd="@dimen/margin_medium"
                         android:hint="@string/add_user_gender"
                         app:errorMessage="@{`add_user_invalid_gender`}"
+                        app:layout_constraintBottom_toTopOf="@+id/ilRacial"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/ilAge"
-                        app:layout_constraintBottom_toTopOf="@+id/ilRacial"
                         app:textCaptured="@{viewModel.userGender}">
 
                     <EditText
                             android:id="@+id/etGender"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:clickable="false"
                             android:cursorVisible="false"
                             android:drawableRight="@drawable/ic_arrow_down"
                             android:focusable="false"
                             android:focusableInTouchMode="false"
                             android:inputType="textNoSuggestions"
-                            android:clickable="false"
                             android:text="@{viewModel.userGender}" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -198,14 +211,14 @@
                             android:id="@+id/etRacial"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:padding="12dp"
-                            android:textColor="@color/black"
-                            android:textSize="16sp"
-                            android:text="@{viewModel.userRacial}"
-                            app:drawableEndCompat="@drawable/ic_arrow_down"
-                            android:inputType="textNoSuggestions"
                             android:focusable="false"
                             android:focusableInTouchMode="false"
+                            android:inputType="textNoSuggestions"
+                            android:padding="12dp"
+                            android:text="@{viewModel.userRacial}"
+                            android:textColor="@color/black"
+                            android:textSize="16sp"
+                            app:drawableEndCompat="@drawable/ic_arrow_down"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/ilRacial" />
@@ -372,8 +385,10 @@
                         app:drawableTopCompat="@drawable/ic_camera"
                         app:layout_constraintBottom_toBottomOf="@+id/ivResidenceProof"
                         app:layout_constraintEnd_toEndOf="@+id/ivResidenceProof"
+                        app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="@+id/ivResidenceProof"
-                        app:layout_constraintTop_toTopOf="@+id/ivResidenceProof" />
+                        app:layout_constraintTop_toTopOf="@+id/ivResidenceProof"
+                        app:layout_constraintVertical_bias="0.511" />
 
                 <ImageView
                         android:id="@+id/ivEditResidencePhoto"
