--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,6 +43,7 @@
     <dimen name="width_42">42dp</dimen>
     <dimen name="width_48">48dp</dimen>
     <dimen name="width_100">100dp</dimen>
+    <dimen name="width_156">156dp</dimen>
 
     <dimen name="corner_radius_50">50dp</dimen>
 
