feature: Implemented custom component for select text value

--- a/app/src/main/res/layout/fragment_user_form.xml
+++ b/app/src/main/res/layout/fragment_user_form.xml
@@ -75,6 +75,7 @@
                         app:tint="@color/gray_5" />
 
                 <app.igormatos.botaprarodar.common.components.CustomPicturePick
+                        android:id="@+id/custom"
                         android:layout_width="@dimen/width_156"
                         android:layout_height="@dimen/width_100"
                         app:layout_constraintBottom_toBottomOf="@+id/profileImageView"
@@ -83,8 +84,8 @@
                         tools:ignore="MissingConstraints"
                         app:imagePathOrUrl="@{viewModel.userImageProfile}"
                         tools:layout_editor_absoluteX="5dp"
-                        tools:src="@drawable/ic_baseline_add_a_photo"
-                        tools:text="Lesley kkkk" />
+                        android:src="@drawable/ic_baseline_add_a_photo"
+                        android:text="Lesley kkkk" />
 
                 <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/ilCompleteName"
