--- a/app/src/main/res/layout/custom_picture_pick.xml
+++ b/app/src/main/res/layout/custom_picture_pick.xml
@@ -4,7 +4,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/border_rounded_corner_black">
+        android:background="@drawable/border_rounded_corner_black"
+        android:id="@+id/picture_pick">
 
     <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/picture"
