--- a/app/src/main/res/layout/fragment_user_form.xml
+++ b/app/src/main/res/layout/fragment_user_form.xml
@@ -154,11 +154,11 @@
                             android:id="@+id/ietIncome"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:inputType="textNoSuggestions"
+                            app:drawableEndCompat="@drawable/ic_arrow_down"
                             android:focusable="false"
                             android:focusableInTouchMode="false"
-                            android:inputType="textNoSuggestions"
-                            android:text="@={viewModel.userIncome}"
-                            app:drawableEndCompat="@drawable/ic_arrow_down" />
+                            android:text="@={viewModel.userIncome}" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -172,22 +172,22 @@
                         android:layout_marginEnd="@dimen/margin_medium"
                         android:hint="@string/add_user_gender"
                         app:errorMessage="@{`add_user_invalid_gender`}"
-                        app:layout_constraintBottom_toTopOf="@+id/ilRacial"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/ilAge"
+                        app:layout_constraintBottom_toTopOf="@+id/ilRacial"
                         app:textCaptured="@{viewModel.userGender}">
 
                     <EditText
                             android:id="@+id/etGender"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:clickable="false"
                             android:cursorVisible="false"
                             android:drawableRight="@drawable/ic_arrow_down"
                             android:focusable="false"
                             android:focusableInTouchMode="false"
                             android:inputType="textNoSuggestions"
+                            android:clickable="false"
                             android:text="@{viewModel.userGender}" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -211,14 +211,14 @@
                             android:id="@+id/etRacial"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:focusable="false"
-                            android:focusableInTouchMode="false"
-                            android:inputType="textNoSuggestions"
                             android:padding="12dp"
-                            android:text="@{viewModel.userRacial}"
                             android:textColor="@color/black"
                             android:textSize="16sp"
+                            android:text="@{viewModel.userRacial}"
                             app:drawableEndCompat="@drawable/ic_arrow_down"
+                            android:inputType="textNoSuggestions"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/ilRacial" />
